[package]
name = "kvs"
version = "0.1.0"
authors = ["Kaviraj <kavirajkanagaraj@gmail.com>"]
description = "A simple key-value store"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.32.0"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
