[package]
name = "kvs"
version = "0.1.0"
authors = ["Kaviraj <kavirajkanagaraj@gmail.com>"]
description = "A simple key-value store"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.32.0"
serde = "1.0.106"
serde_json = "1.0.51"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.1.0"
walkdir = "2.3.1"
